Settings: Gaming Mode revamped [3/4]
Change-Id: Id3189e61044080f343cc8285370c5d79bd44d83d
Signed-off-by: PMS22 <prathams99@rediff.com>
Signed-off-by: Shubham Singh <coolsks94@gmail.com>
Signed-off-by: DennySPB <dennyspb@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3475,6 +3475,20 @@
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.syberia.settings.fragments.PieSettings" />
         </activity>
+
+        <!-- Gaming mode long press activity -->
+        <activity android:name="Settings$GamingSettingsActivity"
+                android:label="@string/gaming_mode_title"
+                android:excludeFromRecents="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.syberia.settings.fragments.GamingMode" />
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                android:value="true" />
+        </activity>
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
