GamingMode: Clean up and refine [2/3]
Change-Id: I313a40d6f40b41c653ef3b659a7c04113696dd80
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: DennySPB <dennyspb@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3390,6 +3390,13 @@
             </intent-filter>
         </provider>
 
+        <receiver android:name="com.syberia.settings.fragments.GamingModeReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.GAMING_MODE_TURN_OFF" />
+                <action android:name="android.intent.action.GAMING_MODE_TURN_ON" />
+            </intent-filter>
+        </receiver>
+
         <receiver
             android:name=".slices.SliceBroadcastReceiver"
             android:exported="false">
