Adapt new designed look to syberia
    * remove useless greeter (it takes a 30% of screen)
    * add back changelog and radio info preference
    * use or vector logo for device info screen
    * fix build in A13
Change-Id: I378e7ab2d5d24b5a5d78c4e18a50916c4ac9436c
Signed-off-by: DennySPb <dennyspb@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4400,6 +4400,8 @@
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.syberia.settings.SyberiaSettings" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                android:value="@string/menu_key_syberia"/>
         </activity>
 
         <!-- Changelog Activity -->
